模块八 作业1 优雅启动 使用livenessProbe探测web服务启动，使用/healthz接口 优雅终止 gin服务自带系统信号接收 资源需求 限制Burstable资源模式 100MB 最高 500MB 探活 livenessProbe 日常运维 日志， 使用configMap 和 环境参数方式 录入logLevel 和 version 配置代码分析： 使用configMap

--- a/work1/Dockerfile
+++ b/work1/Dockerfile
@@ -5,4 +5,5 @@ COPY . .
 RUN \
     go mod download && \
     CGO_ENABLED=0 GOARCH=amd64 GOOS=linux go build -a -o httpserver .
+EXPOSE 8888
 ENTRYPOINT ["/build/httpserver"]
