模块八 作业1 优雅启动 使用livenessProbe探测web服务启动，使用/healthz接口 优雅终止 gin服务自带系统信号接收 资源需求 限制Burstable资源模式 100MB 最高 500MB 探活 livenessProbe 日常运维 日志， 使用configMap 和 环境参数方式 录入logLevel 和 version 配置代码分析： 使用configMap

--- a/work1/my-http-server.yaml
+++ b/work1/my-http-server.yaml
@@ -12,14 +12,13 @@ spec:
         httpGet:
           path: /healthz
           port: 8888
-        initialDeplaySeconds: 5
+        initialDelaySeconds: 5
         timeoutSeconds: 1
       resources:
         limits:
           memory: 500Mi
         requests:
           memory: 100Mi
-      qosClass: Burstable
       env:
         - name: VERSION
           value: my-version-1
